# V-Lille-Dash

./: .gitignore  CONTRIBUTING.MD  README.md  Vlille_en_temps_reel.ipynb  app.py  chatbot_illevia.ipynb  concatenate_df.ipynb  main.py  requirements.txt  scrape_data.py  vlille_data_24_12_2024_09_43.csv
adress_to_coordinates/: geopy_script.py
assets/: style.css  styles.css
data/: vlille_data_01_01_2025_01_27.csv  vlille_data_01_01_2025_02_44.csv  vlille_data_01_01_2025_03_19.csv  vlille_data_01_01_2025_03_43.csv  vlille_data_01_01_2025_03_54.csv  vlille_data_01_01_2025_04_17.csv  vlille_data_01_01_2025_04_36.csv  vlille_data_01_01_2025_04_45.csv  vlille_data_01_01_2025_04_54.csv  vlille_data_01_01_2025_05_14.csv  vlille_data_01_01_2025_05_44.csv  vlille_data_01_01_2025_05_54.csv  vlille_data_01_01_2025_06_21.csv  vlille_data_01_01_2025_06_44.csv  vlille_data_01_01_2025_06_54.csv  vlille_data_01_01_2025_07_14.csv  vlille_data_01_01_2025_07_28.csv  vlille_data_01_01_2025_07_38.csv  vlille_data_01_01_2025_07_47.csv  vlille_data_01_01_2025_07_56.csv  vlille_data_01_01_2025_08_21.csv  vlille_data_01_01_2025_08_41.csv  vlille_data_01_01_2025_08_54.csv  (+23539 more)
lab/: README.md  pyproject.toml  requirements.txt
lab/IAG/: chatbot_illevia.ipynb
lab/dash_app/: app.py  pyproject.toml  requirements.txt
lab/data_prep/: BQ_Pusher.ipynb  cleaning_bq_db.ipynb  concatenate_df.ipynb
lab/eda/: eda.ipynb  todo
lab/modeling/: series_model.ipynb
prod/scrape_data/: pyproject.toml  requirements_scrapper.txt  scrapy_app.py  scrapy_docker_img.dockerfile  scrapy_function.py
(+49 files in other folders)
