[project]
name = "scrape-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "google-cloud-bigquery>=3.38.0",
    "gunicorn>=23.0.0",
    "pandas>=2.3.3",
    "pandas-gbq>=0.29.2",
    "requests>=2.32.5",
]
